aws/cloud-formation/viite-alb_ecs.yaml
# TODO check if this is the latest version THERE IS ONE in DEV directory too

AWSTemplateFormatVersion: 2010-09-09
Description: Viite ECS Fargate service in private subnets. Outputs ALB.
Parameters:
  NetworkStackName:
    Type: String
    Description: Name of the network stack
  ApplicationName:
    Description: Name of the application (no whitespace or special characters)
    Type: String
  Environment:
    Description: "Environment of the application, that these resources are created for. Used when tagging the resources"
    Type: String
  Owner:
    Description: "Owner of the of application, that these resources are created for. Used when tagging the resources"
    Type: String
  Project:
    Description: "Project of the of application, that these resources are created for. Used when tagging the resources"
    Type: String
  ContainerTag:
    Type: String
    Description: Tag of the container
  ContainerPort:
    Type: Number
    Description: Port of the container
  TaskDefinitionForService:
    Type: String
    Description: Task definition for your service
  ApiGatewayUrl:
    Type: String
    Description: ApiGateWay Url

Resources:
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound to port 80, Outbound to everything
      GroupName: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'LoadBalancerSecurityGroup']]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      VpcId:
        Fn::ImportValue:
          !Join ['-', [ !Ref NetworkStackName, 'VPC-Id']]
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'ECS-Cluster-Private']]
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'ECS-Cluster']]
        - Key: Environment
          Value: !Ref Environment
        - Key: Owner
          Value: !Ref Owner
        - Key: Project
          Value: !Ref Project

  ECSLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Join ['', ['/ecs/',!Ref Environment,'-', !Ref ApplicationName, '-ECS-logs']]
      RetentionInDays: 180

  PrivateLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internal
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: 120
        - Key: routing.http2.enabled
          Value: true
      Subnets:
        - Fn::ImportValue:
            !Join ['-', [!Ref NetworkStackName, 'Subnet1-Id']]
        - Fn::ImportValue:
            !Join ['-', [!Ref NetworkStackName, 'Subnet2-Id']]
      SecurityGroups: [!Ref LoadBalancerSecurityGroup]
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'LoadBalancer']]
        - Key: Environment
          Value: !Ref Environment
        - Key: Owner
          Value: !Ref Owner
        - Key: Project
          Value: !Ref Project

  PrivateLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
      - PrivateLoadBalancer
      - TargetGroup
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref TargetGroup
          Type: 'forward'
      LoadBalancerArn: !Ref PrivateLoadBalancer
      Port: 80
      Protocol: HTTP

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: PrivateLoadBalancer
    Properties:
      HealthCheckIntervalSeconds: 300
      HealthCheckPath: /  # If you have a more sophisticated container health check endpoint, add its path here
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      TargetType: ip
      Name: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'TargetGroup']]
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 10
      VpcId:
        Fn::ImportValue:
          !Join ['-', [!Ref NetworkStackName, 'VPC-Id']]
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'LoadBalancer-TargetGroup']]
        - Key: Environment
          Value: !Ref Environment
        - Key: Owner
          Value: !Ref Owner
        - Key: Project
          Value: !Ref Project

  LoadBalancerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn: PrivateLoadBalancerListener
    Properties:
      Actions:
        - TargetGroupArn: !Ref 'TargetGroup'
          Type: 'forward'
      Conditions:
        - Field: path-pattern
          Values: ['*']
      ListenerArn: !Ref PrivateLoadBalancerListener
      Priority: 3

  EcsService:
    Type: AWS::ECS::Service
    DependsOn:
      - ECSCluster
      - TargetGroup
      - PrivateLoadBalancerListener
    Properties:
      Cluster: !Ref ECSCluster
      ServiceName: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'ECS-Service-Private']]
      DesiredCount: 2
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !Ref WebServiceSecurityGroup
          Subnets:
            - Fn::ImportValue:
                !Join ['-', [!Ref NetworkStackName, 'Subnet1-Id']]
            - Fn::ImportValue:
                !Join ['-', [!Ref NetworkStackName, 'Subnet2-Id']]
      LaunchType: FARGATE
      TaskDefinition: !Ref TaskDefinitionForService
      LoadBalancers:
        - ContainerName: !Ref ApplicationName
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref TargetGroup
      DeploymentConfiguration:
        DeploymentCircuitBreaker:
          Enable: true
          Rollback: true
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'ECS-Service']]
        - Key: Environment
          Value: !Ref Environment
        - Key: Owner
          Value: !Ref Owner
        - Key: Project
          Value: !Ref Project

  #The security group, that is protecting the containers.
  WebServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound to port 80 and 5432, Outbound to everything
      GroupName: !Join ['-', [!Ref Environment,!Ref ApplicationName, 'WebServiceSecurityGroup']]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
        - IpProtocol: tcp
          FromPort: !Ref ContainerPort
          ToPort: !Ref ContainerPort
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: !Ref ContainerPort
          ToPort: !Ref ContainerPort
          CidrIpv6: ::/0
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref Environment,!Ref ApplicationName, 'WebService-Security-Group' ] ]
        - Key: Environment
          Value: !Ref Environment
        - Key: Owner
          Value: !Ref Owner
        - Key: Project
          Value: !Ref Project
      VpcId:
        Fn::ImportValue:
          !Join [ '-', [ !Ref NetworkStackName, 'VPC-Id' ] ]

Outputs:
  ALBDNSName:
    Description: DNSname for the private Application Load Balancer
    Value: !GetAtt PrivateLoadBalancer.DNSName
